--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -6,6 +6,7 @@
 
   <title>Great Idea!</title>
 
+  <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
@@ -51,6 +52,8 @@
     </div>  
   </section>
   
+  <!-- <img class="middle-img" src="" alt=""> -->
+
   <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
   
   <section class="bottom-content">
